--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Diplomata|Montserrat+Alternates|
       Sacramento|Charmonman|Bai+Jamjuree|Monoton" rel="stylesheet">
-    <title>React App</title>
+    <title>Shumx</title>
   </head>
   <body>
     <noscript>
@@ -17,5 +17,18 @@
     <div id="root">      
     </div>
   </body>
- 
+  
+  <script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDlkMMefdvfaarSfivUH1i4Gn6VhJ0NCtg",
+      authDomain: "shumai-a3de4.firebaseapp.com",
+      databaseURL: "https://shumai-a3de4.firebaseio.com",
+      projectId: "shumai-a3de4",
+      storageBucket: "shumai-a3de4.appspot.com",
+      messagingSenderId: "604225796713"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
