--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=yes">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="My Brand and personal website: I am a Software Engineer,
+     and play full-stack developer, proficient in Ruby, Ruby on Rails, JavaScript, React.js, Vue.js,
+     Python and Django. I comprehend OOP and utilize TDD while developing websites.">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Diplomata|Montserrat+Alternates|
       Sacramento|Charmonman|Bai+Jamjuree|Monoton" rel="stylesheet">
-    <title>Shumx</title>
+    <title>Shumai</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript> 
-    <div id="root">      
+      <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> 
+    <aside>
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" 
+        data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="soazd1">
+        <a class="LI-simple-link" href='https://uk.linkedin.com/in/soazd1?trk=profile-badge'> Shumai Araya</a>
+      </div> 
+    </aside>
+     <div id="root">         
     </div>
+     
   </body>
+  
  </html>
