fixed media query and styling

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=yes">
-    <meta name="theme-color" content="#000000">
-    <meta name="description" content="My Brand and personal website: I am a Software Engineer,
-     and play full-stack developer, proficient in Ruby, Ruby on Rails, JavaScript, React.js, Vue.js,
-     Python and Django. I comprehend OOP and utilize TDD while developing websites.">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Diplomata|Montserrat+Alternates|
-      Sacramento|Charmonman|Bai+Jamjuree|Monoton" rel="stylesheet">
-    <title>Shumai</title>
-  </head>
-  <body>
-      <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> 
-    <aside>
-        <div class="LI-profile-badge"  data-version="v1" data-size="medium" 
-        data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="soazd1">
-        <a class="LI-simple-link" href='https://uk.linkedin.com/in/soazd1?trk=profile-badge'> Shumai Araya</a>
-      </div> 
-    </aside>
-     <div id="root">         
-    </div>
-     
-  </body>
-  
- </html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+   shrink-to-fit=no, user-scalable=yes">
+  <meta name="theme-color" content="#000000">
+  <meta name="description" content="My Brand and personal website: 
+  I am a Software Engineer,and play full-stack developer, 
+  proficient in Ruby, Ruby on Rails, JavaScript, React.js, Vue.js, Python and
+  Django. I understand OOP and utilize TDD while developing websites.">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Diplomata|
+  Montserrat+Alternates|Sacramento|Charmonman|Bai+Jamjuree|Monoton" 
+  rel="stylesheet">
+  <title>Meskot</title>
+</head>
+<body>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer>
+  </script>
+  <div id="root">
+  </div>
+</body>
+</html>
