added linter and style fixes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Diplomata|
   Montserrat+Alternates|Sacramento|Charmonman|Bai+Jamjuree|Monoton" 
   rel="stylesheet">
-  <title>Meskot</title>
+  <title></title>
 </head>
 <body>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer>
