-added svg for aside -changed font family -refined style

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
   Django. I understand OOP and utilize TDD while developing websites.">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Diplomata|
-  Montserrat+Alternates|Sacramento|Charmonman|Bai+Jamjuree|Monoton" 
+  <link href="https://fonts.googleapis.com/css?family=Diplomata|Philosopher|Petit Formal Script" 
   rel="stylesheet">
   <title></title>
 </head>
