added anime lib and fixed styles

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Diplomata|Philosopher|Petit Formal Script" 
   rel="stylesheet">
-  <title></title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134513684-1"></script>
+  <title>Shumai</title>
 </head>
 <body>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer>
