--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,14 @@
   rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134513684-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-134513684-1');
+  </script>
   <title>Shumai</title>
 </head>
 <body>
